--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kodapassey.github.io/portfolio-2.0",
+  "homepage": "http://kodapassey.github.io/",
   "name": "portfolio-2.0",
   "version": "0.1.0",
   "private": true,
