--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kodapassey.github.io/portfolio-2.0",
+  "homepage": "https://kodapassey.github.io/portfolio-2.0",
   "name": "portfolio-2.0",
   "version": "0.1.0",
   "private": true,
@@ -14,10 +14,10 @@
     "bootstrap": "^5.2.1",
     "loaders.css": "^0.1.2",
     "mdb-react-ui-kit": "^4.2.0",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
